# meshcore_sim

./: .gitignore  CLAUDE.md  DETERMINISM.md  EXAMPLES.md  MISSING_FEATURES.md  PLAN.md  PROPOSAL_AUTOTUNE.md  QUICKSTART_COLLISIONS.md  README.md  SIMULATION.md  requirements.txt
demo/: room_server_demo.py
experiments/: __main__.py  compare.py  runner.py  scenarios.py
node_agent/: CMakeLists.txt  README.md  SimClock.cpp  SimClock.h  SimNode.cpp  SimNode.h  SimRNG.cpp  SimRNG.h  SimRadio.cpp  SimRadio.h  main.cpp
node_agent/arduino_shim/: Arduino.h  Stream.h
node_agent/crypto_shim/: AES.cpp  AES.h  Ed25519.h  SHA256.cpp  SHA256.h
orchestrator/: __main__.py  airtime.py  channel.py  cli.py  config.py  metrics.py  node.py  router.py  topology.py  tracer.py  traffic.py
privatemesh/: README.md
privatemesh/adaptive_delay/: README.md  SimNode.cpp
privatemesh/nexthop/: README.md  SimNode.cpp
sim_tests/: helpers.py  test_adaptive_delay.py  test_airtime.py  test_config.py  test_grid_routing.py  test_integration_smoke.py  test_node_agent.py  test_privacy_baseline.py  test_room_server.py  test_topology.py  test_tracer.py
tests/: CMakeLists.txt  main.cpp  test_crypto.cpp  test_packets.cpp  test_runner.h
tools/: README.md  fetch_topology.py  import_topology.py
topologies/: adversarial.json  asymmetric_hill.json  boston_relays.json  boston_relays_2026_03_17.json  gdansk.json  gen_grid.py  grid_10x10.json  linear_three.json  star_five.json
viz/: __main__.py  app.py  requirements.txt
workbench/: __init__.py  __main__.py  app.py  map_helpers.py  results.py  sim_panel.py  state.py  topology_editor.py  trace_loader.py  trace_viewer.py
